--- a/R/03_augment.qmd
+++ b/R/03_augment.qmd
@@ -1,5 +1,5 @@
 ---
-title: "04_augment"
+title: "Augmentation"
 format:
   revealjs:
     embed-resources: true
@@ -28,20 +28,24 @@ TCGA_clean <- read_tsv("../data/02_dat_clean.tsv", show_col_types = FALSE)
 ```{r}
 #| label: 03-03
 
-TCGA_aug <- TCGA_clean |> 
+# Calculate age at last follow-up in years
+# Calculate disease duration in years including death
+TCGA_aug <- TCGA_clean %>%
   mutate(
-    # Calculate age at last follow-up in years
-    age_at_last_followup_years = (ifelse(vital_status == "Alive", last_contact_days_to, death_days_to) - birth_days_to) / 365.25,
-    
-    # Calculate disease duration in years including death
-    disease_duration_years = (ifelse(vital_status == "Alive", last_contact_days_to / 365.25, death_days_to / 365.25))
-  ) |> 
+    age_at_last_followup_years = case_when(
+      vital_status == "Alive" ~ (last_contact_days_to - birth_days_to) / 365.25,
+      TRUE ~ (death_days_to - birth_days_to) / 365.25
+    ),
+    disease_duration_years = case_when(
+      vital_status == "Alive" ~ last_contact_days_to / 365.25,
+      TRUE ~ death_days_to / 365.25
+    )
+  ) %>%
   mutate(
     # Round the calculated durations to two decimal places
     age_at_last_followup_years = round(age_at_last_followup_years, 2),
     disease_duration_years = round(disease_duration_years, 2)
   )
-
 ```
 
 ## Adding categorical age groups
