--- a/R/04_describe.qmd
+++ b/R/04_describe.qmd
@@ -111,18 +111,21 @@ for (var in names(numeric_vars)) {
 # Create and save the grouped boxplot of age at diagnosis vs cancer type
 age_diagnosis_plot <- ggplot(TCGA_aug, aes(x = cancer_type, y = age_diagnosis, fill = cancer_type)) +
   geom_boxplot(show.legend = FALSE) +
-  labs(title = "Age at diagnosis across cancer types", x = "Cancer Type", y = "Age at Diagnosis") +
+  labs(title = "Age at diagnosis across cancer types", x = "Cancer Type", 
+       y = "Age at Diagnosis") +
   theme_gray() +
-  theme(axis.text.x = element_text(angle = 45, hjust = 1)) # Rotate x labels for readability
+  theme(axis.text.x = element_text(angle = 45, hjust = 1))
 
 ggsave("./../results/04_describe/04_numeric/04_age_diagnosis_boxplot.png", age_diagnosis_plot, width = 10, height = 6)
+
 
 # Create and save the grouped boxplot of disease duration vs cancer type
 disease_duration_plot <- ggplot(TCGA_aug, aes(x = cancer_type, y = disease_duration_years, fill = cancer_type)) +
   geom_boxplot(show.legend = FALSE) +
-  labs(title = "Disease duration across cancer types", x = "Cancer Type", y = "Disease Duration in Years") +
+  labs(title = "Disease duration across cancer types", x = "Cancer Type", 
+       y = "Disease Duration in Years") +
   theme_gray() +
-  theme(axis.text.x = element_text(angle = 45, hjust = 1)) # Rotate x labels for readability
+  theme(axis.text.x = element_text(angle = 45, hjust = 1))
 
 ggsave("./../results/04_describe/04_numeric/04_disease_duration_boxplot.png", disease_duration_plot, width = 10, height = 6)
 ```
@@ -144,7 +147,7 @@ for (var in names(categorical_vars)) {
     geom_bar(fill = "coral", color = "black") +
     labs(title = paste("Bar Plot of", var), x = var, y = "Count") +
     theme_gray(base_size = 9) +
-    theme(axis.text.x = element_text(angle = 45, hjust = 1)) # Rotate x labels for readability
+    theme(axis.text.x = element_text(angle = 45, hjust = 1))
 
   # Save the plot to a file in the 'results' folder
   file_name <- paste0("./../results/04_describe/04_categorical/04_", var, "_barplot.png")
